cards ui improvement

--- a/src/components/GameGrid/GameGrid.module.scss
+++ b/src/components/GameGrid/GameGrid.module.scss
@@ -1,5 +1,8 @@
 .main {
-  margin: 150px;
-  width: 100%;
+  margin-top: 35px;
+  padding-bottom: 30px;
   height: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
