image url crop ,meat score

--- a/src/components/GameGrid/GameGrid.module.scss
+++ b/src/components/GameGrid/GameGrid.module.scss
@@ -1,6 +1,7 @@
 .main {
   margin-top: 35px;
   padding-bottom: 30px;
+  margin-right: 0;
   height: auto;
   display: flex;
   justify-content: center;
